--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.3.1",
+    "react-star-rating-component": "^1.4.1",
     "toastr": "^2.1.4"
   },
   "devDependencies": {
